# AUTHENSOR

./: .cursorrules  .dockerignore  .env.example  .gitignore  .gitpod.yml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  PARTNER_READINESS_REPORT.md  README.md  SECURITY.md  docker-compose.yml  install.ps1  install.sh  llms-full.txt  llms.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.toml  render.yaml  stats.json  turbo.json
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
adapters/crewai/: authensor_guard.py  pyproject.toml
adapters/crewai/src/authensor_crewai/: __init__.py  guard.py
docker/: .env.example  README.md  docker-compose.yml
docs/: alpha_onboarding.md  directory-submissions.md  discovery-playbook-submissions.md  discovery-playbook.md  eu-ai-act-compliance.md  openapi.yaml  owasp-agentic-alignment.md  quickstart_5min.md
examples/crewai-agent/: README.md  agent.py  demo.py  demo_unsafe.py  policy.yaml  pyproject.toml
policy-templates/: README.md  code-agent.json  customer-support.json  data-pipeline.json  database-agent.json  email-comms.json  eu-ai-act-high-risk.json  financial-compliance.json  github-agent.json  healthcare-agent.json  infrastructure.json  mcp-gateway.json  minimal-starter.json  payment-agent.json  production-lockdown.json  research-browsing.json
scripts/: generate-stats.ts  rbac_abuse_test.sh  smoke_tenant.sh
tools/: policy-builder.html
(+115 files in other folders)
